--- a/ecommerce/tsconfig.node.json
+++ b/ecommerce/tsconfig.node.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "lib": ["ES2023"],
+    "lib": ["ESNext"],  // No change needed here, ESNext is fine
     "module": "ESNext",
     "skipLibCheck": true,
 
     /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    "moduleResolution": "node",  // Changed from "bundler" to "node"
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
